# vulkan-voxel-base

./: .gitignore  CMakeLists.txt  README.md
cmake/: LinkImGUI.cmake  LinkTINYOBJLOADER.cmake
include/: app.hpp  keyboard_controller.hpp  stb_image.h  vulkanbase.h  vvb_buffer.hpp  vvb_camera.hpp  vvb_descriptors.hpp  vvb_device.hpp  vvb_instance.hpp  vvb_mesh.hpp  vvb_model.hpp  vvb_pipeline.hpp  vvb_renderer.hpp  vvb_swap_chain.hpp  vvb_texture.hpp  vvb_window.hpp
include/model/: voxel.hpp
include/system/: voxel_render_system.hpp
shaders/: outline.frag  outline.vert  voxel.frag  voxel.vert
src/: app.cpp  keyboard_controller.cpp  main.cpp  vvb_buffer.cpp  vvb_camera.cpp  vvb_descriptors.cpp  vvb_device.cpp  vvb_instance.cpp  vvb_mesh.cpp  vvb_model.cpp  vvb_pipeline.cpp  vvb_renderer.cpp  vvb_swap_chain.cpp  vvb_texture.cpp  vvb_window.cpp
src/model/: voxel.cpp
src/system/: voxel_render_system.cpp
